--- a/front/src/app/features/main/pages/books/books.component.html
+++ b/front/src/app/features/main/pages/books/books.component.html
@@ -1,15 +1,7 @@
 <section class="all-books">
   <h2 class="all-books-header">
     全てのコンテンツ
-    <button
-      mat-raised-button
-      [ngStyle]="{
-        'background-color': '#937DC2',
-        color: '#fff',
-        'font-weight': 'bold'
-      }"
-      (click)="onOpenDialog()"
-    >
+    <button mat-raised-button color="primary" (click)="onOpenDialog()">
       インポート
     </button>
   </h2>
