--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@use "./style/theme.scss";
 /*
   Josh's Custom CSS Reset
   https://www.joshwcomeau.com/css/custom-css-reset/
@@ -59,8 +59,7 @@ body {
 
 // original
 main {
-  background-color: #fcfbfb;
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 3rem);
 }
 
 html,
@@ -70,17 +69,12 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #fcfbfb;
 }
 .cdk-global-overlay-wrapper {
   align-items: flex-end !important;
 }
 
-.mat-raised-button {
-  background-color: rgb(147, 125, 194) !important;
-  color: rgb(255, 255, 255) !important;
+button {
   font-weight: bold !important;
-}
-.mat-button-disabled {
-  background-color: rgba(0, 0, 0, 0.12) !important;
-  color: rgba(0, 0, 0, 0.26) !important;
 }
