--- a/front/src/app/features/main/parts/mean-word/mean-word.component.scss
+++ b/front/src/app/features/main/parts/mean-word/mean-word.component.scss
@@ -1,38 +1,16 @@
-:host {
-  display: block;
-  background: #fff;
-  border-radius: 8px 8px 0 0;
-  padding: 8px 16px 16px;
-  width: 100vw;
-  height: 80vh;
-  box-sizing: border-box;
-  animation: 800ms ease-in-out 0ms 1 normal none running dialog-enter;
-}
+@use "./../../../../../style/variable.scss" as variable;
 
-@keyframes dialog-enter {
-  from {
-    transform: translateY(200vh);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0vh);
-    opacity: 1;
-  }
+:host {
+  @include variable.dialog-host;
 }
-.word-dialog {
-  height: 100%;
+.dialog {
+  @include variable.dialog-wrapper;
 }
 .dialog-header {
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 1.4rem;
-  font-weight: bold;
+  @include variable.dialog-header;
 }
 .dialog-content {
-  height: calc(100% - 5rem);
-  overflow-y: scroll;
+  @include variable.dialog-content;
 }
 .label {
   font-size: 9pt;
