GoogleDriveのUrlを保存できるようにする

--- a/front/src/app/features/main/pages/book/book.component.html
+++ b/front/src/app/features/main/pages/book/book.component.html
@@ -13,10 +13,7 @@
       >
         全再生
       </a>
-      <button mat-raised-button (click)="onResync()">再同期</button>
-      <button mat-raised-button color="accent" (click)="onDelete()">
-        削除する
-      </button>
+      <button mat-raised-button (click)="openSettings()">設定</button>
     </div>
   </div>
 
