--- a/front/src/app/features/main/parts/settings-dialog/settings-dialog.component.scss
+++ b/front/src/app/features/main/parts/settings-dialog/settings-dialog.component.scss
@@ -11,4 +11,10 @@
 }
 .dialog-content {
   @include variable.dialog-content;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.audio-form {
+  width: 80%;
 }
