--- a/front/src/app/features/main/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/features/main/pages/sentense-viewer/sentense-viewer.component.scss
@@ -11,7 +11,7 @@
 }
 .word-viewer {
   height: calc(100% - 1rem);
-  margin: 1rem 1rem 0;
+  margin: 0 1rem;
   overflow: hidden;
   display: grid;
   row-gap: 1.2rem;
