--- a/front/src/app/features/main/pages/book/book.component.scss
+++ b/front/src/app/features/main/pages/book/book.component.scss
@@ -36,3 +36,20 @@
   justify-content: flex-end;
   gap: 0.75rem;
 }
+
+.not-exist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.not-exist-icon {
+  font-size: 48px;
+  height: auto;
+  width: auto;
+}
+.not-exist-content {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
