--- a/front/src/app/features/main/pages/book/book.component.scss
+++ b/front/src/app/features/main/pages/book/book.component.scss
@@ -1,4 +1,5 @@
 @use "./../../../../../style/color.scss" as color;
+@use "./../../../../../style/variable.scss" as variable;
 
 .loading {
   display: flex;
@@ -38,18 +39,11 @@
 }
 
 .not-exist {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include variable.not-exist;
 }
 .not-exist-icon {
-  font-size: 48px;
-  height: auto;
-  width: auto;
+  @include variable.not-exist-icon;
 }
 .not-exist-content {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-top: 1rem;
+  @include variable.not-exist-content;
 }
