単語帳の読み込み部分を修正する

--- a/front/src/app/features/main/parts/download-book/download-book.component.html
+++ b/front/src/app/features/main/parts/download-book/download-book.component.html
@@ -15,7 +15,7 @@
       <h3>読み込む方法</h3>
       <ol>
         <li>Googleスプレッドシートを作成する</li>
-        <li>1行目に「ja en pronanciation section audio note」を追加</li>
+        <li>1行目に「ja」「en」「section」をそれぞれの列に追加</li>
         <li>2行目以降に列に対応する英文や日本文を追加</li>
         <li>
           spreadsheet-reader@wk-moment.iam.gserviceaccount.comを閲覧者として共有する
