使用していないproviderの削除。再同期のメソッドを間違えていたので修正。

--- a/front/src/app/features/main/parts/settings-dialog/settings-dialog.component.html
+++ b/front/src/app/features/main/parts/settings-dialog/settings-dialog.component.html
@@ -20,7 +20,7 @@
       </mat-form-field>
     </section>
     <section>
-      <button mat-raised-button color="primary" (click)="onDelete()">
+      <button mat-raised-button color="primary" (click)="onResync()">
         単語帳の内容を再同期する
       </button>
     </section>
