同期した日付の保存。型の整理。

--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -6,6 +6,7 @@
 <ng-template #elseTemplate>
   <ng-container *ngIf="isExist; else notExistTemplate">
     <div class="sub-header">
+      <div class="sub-header-content">更新日: {{ book?.updatedAt }}</div>
       <div class="sub-header-actions">
         <a
           mat-raised-button
