--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -10,6 +10,9 @@
   padding: 0.7rem 0.7rem 0.7rem 3.2rem;
   box-sizing: border-box;
 }
+.sub-header-content {
+  margin-bottom: 0.5rem;
+}
 .sub-header-actions {
   display: flex;
   gap: 0.8rem;
