pronunciationのスペルミス。更新日を設定の中に表示させる

--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -5,7 +5,7 @@
         <div class="card-content first-sentense">
           <app-en-sentense
             [sentense]="sentenses[activeSentenseNumber].en"
-            [pronanciation]="sentenses[activeSentenseNumber].pronanciation"
+            [pronunciation]="sentenses[activeSentenseNumber].pronunciation"
             (wordClick)="onClickWord($event)"
           ></app-en-sentense>
         </div>
