--- a/front/src/app/parts/en-sentense/en-sentense.component.html
+++ b/front/src/app/parts/en-sentense/en-sentense.component.html
@@ -4,5 +4,5 @@
   (click)="onClickWord(item)"
 >
   <div class="en">{{ item }}</div>
-  <div class="pronanciation">{{ splitedPronanciation[index] }}</div>
+  <div class="pronunciation">{{ splitedPronunciation[index] }}</div>
 </div>
