--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -1,6 +1,6 @@
 <section class="dialog">
   <div class="dialog-header">
-    <div>本を読み込む</div>
+    <div>単語帳を読み込む</div>
     <button
       mat-icon-button
       color="primary"
