キーボードで英語が変わるように変更

--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -4,6 +4,9 @@
       <swiper
         [slidesPerView]="1"
         [spaceBetween]="50"
+        [keyboard]="{
+          enabled: true
+        }"
         [virtual]="true"
         [effect]="'creative'"
         [navigation]="true"
