--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -18,6 +18,16 @@
       </mat-card></a
     >
   </div>
+  <div
+    class="not-exist"
+    *ngIf="isInitLoaded && !isLoading && books.length === 0"
+  >
+    <div>
+      <mat-icon class="not-exist-icon">mood</mat-icon>
+    </div>
+    <div class="not-exist-content">単語帳がありません。</div>
+    <div class="not-exist-content">単語帳をインポートしてください。</div>
+  </div>
   <div *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
