--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -1,4 +1,5 @@
 @use "./../../../style/color.scss" as color;
+@use "./../../../style/variable.scss" as variable;
 
 .all-books {
   padding: 1rem;
@@ -26,4 +27,14 @@
   font-weight: bolder;
   color: color.$darker-color;
   margin: 0;
+}
+
+.not-exist {
+  @include variable.not-exist;
+}
+.not-exist-icon {
+  @include variable.not-exist-icon;
+}
+.not-exist-content {
+  @include variable.not-exist-content;
 }
