--- a/front/src/style/variable.scss
+++ b/front/src/style/variable.scss
@@ -1,3 +1,5 @@
+@use "./color.scss" as color;
+
 @keyframes dialog-enter {
   from {
     transform: translateY(200vh);
@@ -40,6 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: color.$text-title-color;
 }
 @mixin not-exist-icon {
   font-size: 48px;
