viewerでアクションボタンの変更。設定ボタンをクリックで設定のモーダルが表示される。

--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -70,7 +70,11 @@
   align-items: center;
   justify-content: space-between;
 }
-
+.action-buttons-item {
+  button {
+    margin: 0 0.3rem;
+  }
+}
 .not-exist {
   @include variable.not-exist;
 }
