--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.scss
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.scss
@@ -11,7 +11,16 @@
 }
 .dialog-content {
   @include variable.dialog-content;
+}
+
+.setting-form {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1.4rem;
+}
+
+.action-buttons {
+  margin: 3rem 0;
+  display: flex;
+  gap: 2rem;
 }
