ダイアログで閉じるボタンにフォーカスを当たる

--- a/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
+++ b/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
@@ -1,7 +1,7 @@
 <section class="word-dialog">
   <div class="dialog-header">
     設定
-    <button mat-icon-button (click)="onClose()">
+    <button mat-icon-button (click)="onClose()" cdkFocusInitial>
       <mat-icon>close</mat-icon>
     </button>
   </div>
