--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -6,6 +6,7 @@
       color="primary"
       aria-label="Close"
       (click)="onClose()"
+      cdkFocusInitial
     >
       <mat-icon>close</mat-icon>
     </button>
@@ -14,7 +15,7 @@
     <section>
       <h3>読み込む方法</h3>
       <ol>
-        <li>Googleスプレッドシートを作成する</li>
+        <li>Google Sheetsを作成する</li>
         <li>1行目に「ja」「en」「section」をそれぞれの列に追加</li>
         <li>2行目以降に列に対応する英文や日本文を追加</li>
         <li>
