--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
@@ -1,7 +1,7 @@
 <section class="dialog-wrapper">
   <div class="dialog-header">
     設定
-    <button mat-icon-button (click)="onClose()">
+    <button mat-icon-button (click)="onClose()" cdkFocusInitial>
       <mat-icon>close</mat-icon>
     </button>
   </div>
