文言の修正

--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -17,7 +17,7 @@
       <ol>
         <li>Google Sheetsを作成する</li>
         <li>1行目に「ja」「en」「section」をそれぞれの列に追加</li>
-        <li>2行目以降に列に対応する英文や日本文を追加</li>
+        <li>2行目以降に列に対応する日本文、英文、セクション名を追加</li>
         <li>
           spreadsheet-reader@wk-moment.iam.gserviceaccount.comを閲覧者として共有する
         </li>
