--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -19,7 +19,14 @@
         <li>1行目に「ja」「en」「section」をそれぞれの列に追加</li>
         <li>2行目以降に列に対応する日本文、英文、セクション名を追加</li>
         <li>
-          spreadsheet-reader@wk-moment.iam.gserviceaccount.comを閲覧者として共有する
+          <button
+            mat-stroked-button
+            cdkCopyToClipboard="spreadsheet-reader@wk-moment.iam.gserviceaccount.com"
+          >
+            spreadsheet-reader@wk-moment.iam.gserviceaccount.com
+            <mat-icon>content_copy</mat-icon>
+          </button>
+          を閲覧者として共有する
         </li>
         <li>下記の入力欄にGoogle SheetsのURLを書き込む</li>
         <li>読み込みボタンを押す</li>
