--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -59,7 +59,7 @@
                   *ngIf="isSecondSentenseHide && setting?.secondLangIsHide"
                   (click)="onClickHide()"
                 >
-                  🫣 Please Click HERE!!🫣
+                  🫣 Check Answer!!🫣
                 </div>
               </div>
               <div class="card-content note" *ngIf="sentense.note">
