--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -106,6 +106,13 @@
           >
             <mat-icon>hearing</mat-icon>
           </button>
+          <button
+            mat-mini-fab
+            aria-label="Recording"
+            (click)="onPronunciation()"
+          >
+            <mat-icon>graphic_eq</mat-icon>
+          </button>
         </div>
       </mat-card>
     </ng-container>
