--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -72,7 +72,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: rgb(232, 234, 237);
+  background-color: #e8eaed;
 }
 .cdk-global-overlay-wrapper {
   align-items: flex-end !important;
