--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
@@ -34,7 +34,7 @@
     </form>
     <div class="action-buttons">
       <a
-        href="https://www.notion.so/Moment-9d9e6093566a4f02a78004ac048b27b5"
+        href="https://cedar-impatiens-49c.notion.site/Moment-9d9e6093566a4f02a78004ac048b27b5"
         target="_blank"
         mat-raised-button
         color="primary"
