--- a/front/src/app/parts/header/header.component.scss
+++ b/front/src/app/parts/header/header.component.scss
@@ -6,9 +6,23 @@ header {
   align-items: center;
   padding: 0 1rem;
   box-sizing: border-box;
+  justify-content: space-between;
+}
+.left {
+  display: flex;
+  align-items: center;
+  width: 88%;
+}
+.action-buttons {
+  display: flex;
+  align-items: center;
 }
 .title {
   font-size: 1.4rem;
   font-weight: bold;
   color: color.$darker-color;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+  overflow: hidden;
 }
