容量を表示するようにした

--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -1,6 +1,6 @@
 <section class="all-books">
   <h2 class="all-books-header">
-    全てのコンテンツ
+    全ての単語帳
     <button mat-raised-button color="primary" (click)="onOpenDialog()">
       インポート
     </button>
