--- a/front/src/style/variable.scss
+++ b/front/src/style/variable.scss
@@ -13,7 +13,7 @@
 
 @mixin dialog-host {
   display: block;
-  background: #fff;
+  background: color.$bg-color;
   border-radius: 8px 8px 0 0;
   padding: 8px 16px 16px;
   width: 100vw;
