音声を読み込んでおくように修正

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -11,6 +11,7 @@
     <a
       href="https://cedar-impatiens-49c.notion.site/Moment-9d9e6093566a4f02a78004ac048b27b5"
       target="_blank"
+      alt="ドキュメントを見る"
       mat-raised-button
     >
       <mat-icon>description</mat-icon>
