--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -51,6 +51,7 @@
           [disabled]="form.invalid"
           color="primary"
           (click)="onSubmit()"
+          class="download-button"
           mat-raised-button
         >
           Google Sheetsを読み込む
