--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -1,7 +1,12 @@
 <section class="all-books">
   <h2 class="all-books-header">
     全ての単語帳
-    <button mat-raised-button color="primary" (click)="onOpenDialog()">
+    <button
+      class="import-book"
+      mat-raised-button
+      color="primary"
+      (click)="onOpenDialog()"
+    >
       インポート
     </button>
   </h2>
