--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -21,6 +21,7 @@
   display: grid;
   row-gap: 1.2rem;
   grid-template-rows: repeat(3, 1fr);
+  padding: 8px;
 }
 .hide-target {
   position: relative;
@@ -70,7 +71,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: inherit;
+  padding: 0 16px;
 }
+
 .slider {
   position: absolute;
   width: 100%;
