--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
@@ -34,6 +34,7 @@
     </form>
     <div class="action-buttons">
       <a
+        class="action-button"
         href="https://cedar-impatiens-49c.notion.site/Moment-9d9e6093566a4f02a78004ac048b27b5"
         target="_blank"
         mat-raised-button
@@ -41,6 +42,7 @@
         >使い方 <mat-icon>open_in_new</mat-icon></a
       >
       <a
+        class="action-button"
         href="https://docs.google.com/forms/d/16Q8LlY_gQOyZyKbb6y4hdZwuk1Qs0U658vTKjgI-Lzs"
         target="_blank"
         mat-raised-button
